refactor: 5단계(리팩터링)